working on plugin and plugin content-types

--- a/apps/strapi/src/plugins/atlas-editor/admin/src/translations/no.json
+++ b/apps/strapi/src/plugins/atlas-editor/admin/src/translations/no.json
@@ -1,4 +1,7 @@
 {
+  "atlas-editor.plugin.name": "Helseatlas",
   "Homepage.BaseHeaderLayout.title": "Helseatlas",
-  "Homepage.BaseHeaderLayout.subtitle": "Velkommen til publiseringsplattformen!"
+  "Homepage.BaseHeaderLayout.subtitle": "Velkommen til administrasjonssidene!",
+  "Homepage.EmptyStateLayout.content": "Opprett det første atlaset",
+  "Homepage.EmptyStateLayout.buttonText": "Opprett atlas"
 }
