--- a/apps/strapi/src/plugins/atlas-editor/admin/src/translations/en.json
+++ b/apps/strapi/src/plugins/atlas-editor/admin/src/translations/en.json
@@ -1,4 +1,7 @@
 {
+  "atlas-editor.plugin.name": "Helseatlas",
   "Homepage.BaseHeaderLayout.title": "Helseatlas",
-  "Homepage.BaseHeaderLayout.subtitle": "Welcome to the publication platform!"
+  "Homepage.BaseHeaderLayout.subtitle": "Welcome to the administration pages!",
+  "Homepage.EmptyStateLayout.content": "Create the first atlas",
+  "Homepage.EmptyStateLayout.buttonText": "Create atlas"
 }
