working on plugin ui

--- a/apps/strapi/src/plugins/atlas-editor/admin/src/translations/en.json
+++ b/apps/strapi/src/plugins/atlas-editor/admin/src/translations/en.json
@@ -1,7 +1,15 @@
 {
-  "atlas-editor.plugin.name": "Helseatlas",
   "Homepage.BaseHeaderLayout.title": "Helseatlas",
-  "Homepage.BaseHeaderLayout.subtitle": "Welcome to the administration pages!",
   "Homepage.EmptyStateLayout.content": "Create the first atlas",
-  "Homepage.EmptyStateLayout.buttonText": "Create atlas"
+  "Homepage.createButtonText": "Create new atlas",
+  "Homepage.Table.published": "Published",
+  "Homepage.Table.mainTitle": "Main Title",
+  "Homepage.Table.shortTitle": "Short Title",
+  "Homepage.Table.yes": "Yes",
+  "Homepage.Table.no": "No",
+  "Homepage.Table.edit": "Edit",
+  "Homepage.Table.delete": "Delete",
+  "Homepage.Subtitle.oneEntryFound": "One entry found",
+  "Homepage.Subtitle.entriesFound": "entries found",
+  "Homepage.Subtitle.noEntriesFound": "No entries found"
 }
