--- a/apps/strapi/src/plugins/atlas-editor/admin/src/translations/no.json
+++ b/apps/strapi/src/plugins/atlas-editor/admin/src/translations/no.json
@@ -1,7 +1,17 @@
 {
-  "atlas-editor.plugin.name": "Helseatlas",
   "Homepage.BaseHeaderLayout.title": "Helseatlas",
   "Homepage.BaseHeaderLayout.subtitle": "Velkommen til administrasjonssidene!",
   "Homepage.EmptyStateLayout.content": "Opprett det første atlaset",
-  "Homepage.EmptyStateLayout.buttonText": "Opprett atlas"
+  "Homepage.createButtonText": "Opprett nytt atlas",
+  "Homepage.Table.published": "Publisert",
+  "Homepage.Table.mainTitle": "Hovedtittel",
+  "Homepage.Table.shortTitle": "Korttittel",
+  "Homepage.Table.yes": "Ja",
+  "Homepage.Table.no": "Nei",
+  "Homepage.Table.edit": "Rediger",
+  "Homepage.Table.delete": "Slett",
+  "Homepage.Table.addNewAtlas": "Legg til nytt atlas",
+  "Homepage.Subtitle.oneEntryFound": "Én oppføring funnet",
+  "Homepage.Subtitle.entriesFound": "oppføringer funnet",
+  "Homepage.Subtitle.noEntriesFound": "Ingen oppføringer funnet"
 }
