added search bar to helseatlas list

--- a/apps/strapi/src/plugins/atlas-editor/admin/src/translations/en.json
+++ b/apps/strapi/src/plugins/atlas-editor/admin/src/translations/en.json
@@ -11,5 +11,7 @@
   "Homepage.Table.delete": "Delete",
   "Homepage.Subtitle.oneEntryFound": "One entry found",
   "Homepage.Subtitle.entriesFound": "entries found",
-  "Homepage.Subtitle.noEntriesFound": "No entries found"
+  "Homepage.Subtitle.noEntriesFound": "No entries found",
+  "Homepage.AtlasSearch.search": "Search",
+  "Homepage.AtlasSearch.clearLabel": "Clear"
 }
