--- a/apps/strapi/src/plugins/atlas-editor/admin/src/translations/no.json
+++ b/apps/strapi/src/plugins/atlas-editor/admin/src/translations/no.json
@@ -13,5 +13,7 @@
   "Homepage.Table.addNewAtlas": "Legg til nytt atlas",
   "Homepage.Subtitle.oneEntryFound": "Én oppføring funnet",
   "Homepage.Subtitle.entriesFound": "oppføringer funnet",
-  "Homepage.Subtitle.noEntriesFound": "Ingen oppføringer funnet"
+  "Homepage.Subtitle.noEntriesFound": "Ingen oppføringer funnet",
+  "Homepage.AtlasSearch.search": "Søk",
+  "Homepage.AtlasSearch.clearLabel": "Nullstill"
 }
