fetching only needed fields, sorting, more columns in table, some unit-tests, etc.

--- a/apps/strapi/src/plugins/atlas-editor/admin/src/translations/en.json
+++ b/apps/strapi/src/plugins/atlas-editor/admin/src/translations/en.json
@@ -2,9 +2,12 @@
   "Homepage.BaseHeaderLayout.title": "Helseatlas",
   "Homepage.EmptyStateLayout.content": "Create the first atlas",
   "Homepage.createButtonText": "Create new atlas",
+  "Homepage.Table.id": "Id",
   "Homepage.Table.published": "Published",
   "Homepage.Table.mainTitle": "Main Title",
   "Homepage.Table.shortTitle": "Short Title",
+  "Homepage.Table.created": "Created",
+  "Homepage.Table.updated": "Updated",
   "Homepage.Table.yes": "Yes",
   "Homepage.Table.no": "No",
   "Homepage.Table.edit": "Edit",
