--- a/apps/strapi/src/plugins/atlas-editor/admin/src/translations/no.json
+++ b/apps/strapi/src/plugins/atlas-editor/admin/src/translations/no.json
@@ -3,9 +3,12 @@
   "Homepage.BaseHeaderLayout.subtitle": "Velkommen til administrasjonssidene!",
   "Homepage.EmptyStateLayout.content": "Opprett det første atlaset",
   "Homepage.createButtonText": "Opprett nytt atlas",
+  "Homepage.Table.id": "Id",
   "Homepage.Table.published": "Publisert",
   "Homepage.Table.mainTitle": "Hovedtittel",
   "Homepage.Table.shortTitle": "Korttittel",
+  "Homepage.Table.created": "Opprettet",
+  "Homepage.Table.updated": "Oppdatert",
   "Homepage.Table.yes": "Ja",
   "Homepage.Table.no": "Nei",
   "Homepage.Table.edit": "Rediger",
