working on edit page, some changes to how api-calls are made, etc.

--- a/apps/strapi/src/plugins/atlas-editor/admin/src/translations/en.json
+++ b/apps/strapi/src/plugins/atlas-editor/admin/src/translations/en.json
@@ -16,5 +16,11 @@
   "Homepage.Subtitle.entriesFound": "entries found",
   "Homepage.Subtitle.noEntriesFound": "No entries found",
   "Homepage.AtlasSearch.search": "Search",
-  "Homepage.AtlasSearch.clearLabel": "Clear"
+  "Homepage.AtlasSearch.clearLabel": "Clear",
+  "Editpage.BaseHeaderLayout.edit": "Edit",
+  "Editpage.BaseHeaderLayout.save": "Save",
+  "Editpage.BaseHeaderLayout.goback": "Go back",
+  "Editpage.BaseHeaderLayout.created": "Created",
+  "Editpage.BaseHeaderLayout.updated": "Updated",
+  "Editpage.BaseHeaderLayout.unsavedChangesPrompt": "You have unsaved changes. Are you sure you want to leave?"
 }
