--- a/apps/strapi/src/plugins/atlas-editor/admin/src/translations/no.json
+++ b/apps/strapi/src/plugins/atlas-editor/admin/src/translations/no.json
@@ -18,5 +18,11 @@
   "Homepage.Subtitle.entriesFound": "oppføringer funnet",
   "Homepage.Subtitle.noEntriesFound": "Ingen oppføringer funnet",
   "Homepage.AtlasSearch.search": "Søk",
-  "Homepage.AtlasSearch.clearLabel": "Nullstill"
+  "Homepage.AtlasSearch.clearLabel": "Nullstill",
+  "Editpage.BaseHeaderLayout.edit": "Rediger",
+  "Editpage.BaseHeaderLayout.save": "Lagre",
+  "Editpage.BaseHeaderLayout.goback": "Tilbake",
+  "Editpage.BaseHeaderLayout.created": "Opprettet",
+  "Editpage.BaseHeaderLayout.updated": "Oppdatert",
+  "Editpage.BaseHeaderLayout.unsavedChangesPrompt": "Du har ulagrede endringer. Er du sikker på at du vil forlate?"
 }
