edit box for main title finished.

--- a/apps/strapi/src/plugins/atlas-editor/admin/src/translations/en.json
+++ b/apps/strapi/src/plugins/atlas-editor/admin/src/translations/en.json
@@ -22,5 +22,12 @@
   "Editpage.BaseHeaderLayout.goback": "Go back",
   "Editpage.BaseHeaderLayout.created": "Created",
   "Editpage.BaseHeaderLayout.updated": "Updated",
-  "Editpage.BaseHeaderLayout.unsavedChangesPrompt": "You have unsaved changes. Are you sure you want to leave?"
+  "Editpage.BaseHeaderLayout.unsavedChangesPrompt": "You have unsaved changes. Are you sure you want to leave?",
+  "Editpage.EditTitleModal.editModalTitle": "Edit Title",
+  "Editpage.EditTitleModal.cancel": "Cancel",
+  "Editpage.EditTitleModal.finish": "Finish",
+  "Editpage.EditTitleModal.enterMainTitle": "Enter main title...",
+  "Editpage.EditTitleModal.mainTitleLabel": "Main Title",
+  "Editpage.EditTitleModal.editMainTitleHint": "The main title is shown at the top of the page for the atlas.",
+  "Editpage.EditTitleModal.mainTitleCannotBeEmpty": "The main title cannot be empty!"
 }
