--- a/apps/strapi/src/plugins/atlas-editor/admin/src/translations/no.json
+++ b/apps/strapi/src/plugins/atlas-editor/admin/src/translations/no.json
@@ -24,5 +24,12 @@
   "Editpage.BaseHeaderLayout.goback": "Tilbake",
   "Editpage.BaseHeaderLayout.created": "Opprettet",
   "Editpage.BaseHeaderLayout.updated": "Oppdatert",
-  "Editpage.BaseHeaderLayout.unsavedChangesPrompt": "Du har ulagrede endringer. Er du sikker på at du vil forlate?"
+  "Editpage.BaseHeaderLayout.unsavedChangesPrompt": "Du har ulagrede endringer. Er du sikker på at du vil forlate?",
+  "Editpage.EditTitleModal.editModalTitle": "Redigér tittel",
+  "Editpage.EditTitleModal.cancel": "Avbryt",
+  "Editpage.EditTitleModal.finish": "Fullfør",
+  "Editpage.EditTitleModal.enterMainTitle": "Skriv hovedtittel...",
+  "Editpage.EditTitleModal.mainTitleLabel": "Hovedtittel",
+  "Editpage.EditTitleModal.editMainTitleHint": "Hovedtittelen vises øverst på siden for atlaset.",
+  "Editpage.EditTitleModal.mainTitleCannotBeEmpty": "Hovedtittelen kan ikke være tom!"
 }
