api for updating atlas and access control"

--- a/apps/strapi/src/plugins/atlas-editor/admin/src/translations/en.json
+++ b/apps/strapi/src/plugins/atlas-editor/admin/src/translations/en.json
@@ -29,5 +29,6 @@
   "Editpage.EditTitleModal.enterMainTitle": "Enter main title...",
   "Editpage.EditTitleModal.mainTitleLabel": "Main Title",
   "Editpage.EditTitleModal.editMainTitleHint": "The main title is shown at the top of the page for the atlas.",
-  "Editpage.EditTitleModal.mainTitleCannotBeEmpty": "The main title cannot be empty!"
+  "Editpage.Notifications.updateSuccess": "The atlas was updated.",
+  "Editpage.Notifications.updateError": "The atlas could not be updated!"
 }
