--- a/apps/strapi/src/plugins/atlas-editor/admin/src/translations/no.json
+++ b/apps/strapi/src/plugins/atlas-editor/admin/src/translations/no.json
@@ -31,5 +31,7 @@
   "Editpage.EditTitleModal.enterMainTitle": "Skriv hovedtittel...",
   "Editpage.EditTitleModal.mainTitleLabel": "Hovedtittel",
   "Editpage.EditTitleModal.editMainTitleHint": "Hovedtittelen vises øverst på siden for atlaset.",
-  "Editpage.EditTitleModal.mainTitleCannotBeEmpty": "Hovedtittelen kan ikke være tom!"
+  "Editpage.EditTitleModal.mainTitleCannotBeEmpty": "Hovedtittelen kan ikke være tom!",
+  "Editpage.Notifications.updateSuccess": "Atlaset ble oppdatert.",
+  "Editpage.Notifications.updateError": "Atlaset kunne ikke oppdateres!"
 }
