adding an infobox on editpage, fixing some api-stuff

--- a/apps/strapi/src/plugins/atlas-editor/admin/src/translations/en.json
+++ b/apps/strapi/src/plugins/atlas-editor/admin/src/translations/en.json
@@ -30,5 +30,9 @@
   "Editpage.EditTitleModal.mainTitleLabel": "Main Title",
   "Editpage.EditTitleModal.editMainTitleHint": "The main title is shown at the top of the page for the atlas.",
   "Editpage.Notifications.updateSuccess": "The atlas was updated.",
-  "Editpage.Notifications.updateError": "The atlas could not be updated!"
+  "Editpage.Notifications.updateError": "The atlas could not be updated!",
+  "Component.Information.created": "Created",
+  "Component.Information.by": "By",
+  "Component.Information.lastUpdate": "Last update",
+  "Component.Information.information": "Information"
 }
