--- a/apps/strapi/src/plugins/atlas-editor/admin/src/translations/no.json
+++ b/apps/strapi/src/plugins/atlas-editor/admin/src/translations/no.json
@@ -33,5 +33,9 @@
   "Editpage.EditTitleModal.editMainTitleHint": "Hovedtittelen vises øverst på siden for atlaset.",
   "Editpage.EditTitleModal.mainTitleCannotBeEmpty": "Hovedtittelen kan ikke være tom!",
   "Editpage.Notifications.updateSuccess": "Atlaset ble oppdatert.",
-  "Editpage.Notifications.updateError": "Atlaset kunne ikke oppdateres!"
+  "Editpage.Notifications.updateError": "Atlaset kunne ikke oppdateres!",
+  "Component.Information.created": "Opprettet",
+  "Component.Information.by": "Av",
+  "Component.Information.lastUpdate": "Sist oppdatert",
+  "Component.Information.information": "Informasjon"
 }
