keeping track of original and current atlas versions, some initial sidebar code, a toggle for isPublished

--- a/apps/strapi/src/plugins/atlas-editor/admin/src/translations/en.json
+++ b/apps/strapi/src/plugins/atlas-editor/admin/src/translations/en.json
@@ -34,5 +34,8 @@
   "Component.Information.created": "Created",
   "Component.Information.by": "By",
   "Component.Information.lastUpdate": "Last update",
-  "Component.Information.information": "Information"
+  "Component.Information.information": "Information",
+  "Editpage.Form.isPublished": "Is published",
+  "Editpage.Form.yes": "Yes",
+  "Editpage.Form.no": "No"
 }
