--- a/apps/strapi/src/plugins/atlas-editor/admin/src/translations/no.json
+++ b/apps/strapi/src/plugins/atlas-editor/admin/src/translations/no.json
@@ -37,5 +37,8 @@
   "Component.Information.created": "Opprettet",
   "Component.Information.by": "Av",
   "Component.Information.lastUpdate": "Sist oppdatert",
-  "Component.Information.information": "Informasjon"
+  "Component.Information.information": "Informasjon",
+  "Editpage.Form.isPublished": "Er publisert",
+  "Editpage.Form.yes": "Ja",
+  "Editpage.Form.no": "Nei"
 }
