added some i18n strings, added function for diffing objects, also moved to utils folder

--- a/apps/strapi/src/plugins/atlas-editor/admin/src/translations/en.json
+++ b/apps/strapi/src/plugins/atlas-editor/admin/src/translations/en.json
@@ -37,5 +37,7 @@
   "Component.Information.information": "Information",
   "Editpage.Form.isPublished": "Is published",
   "Editpage.Form.yes": "Yes",
-  "Editpage.Form.no": "No"
+  "Editpage.Form.no": "No",
+  "Editpage.EditAtlasNav.toc": "Table of Contents",
+  "Editpage.EditAtlasNav.overview": "Overview"
 }
