--- a/apps/strapi/src/plugins/atlas-editor/admin/src/translations/no.json
+++ b/apps/strapi/src/plugins/atlas-editor/admin/src/translations/no.json
@@ -40,5 +40,7 @@
   "Component.Information.information": "Informasjon",
   "Editpage.Form.isPublished": "Er publisert",
   "Editpage.Form.yes": "Ja",
-  "Editpage.Form.no": "Nei"
+  "Editpage.Form.no": "Nei",
+  "Editpage.EditAtlasNav.toc": "Innholdsfortegnelse",
+  "Editpage.EditAtlasNav.overview": "Oversikt"
 }
