Added logic for publishedAt and publishedBy

--- a/apps/strapi/src/plugins/atlas-editor/admin/src/translations/no.json
+++ b/apps/strapi/src/plugins/atlas-editor/admin/src/translations/no.json
@@ -38,6 +38,7 @@
   "Component.Information.by": "Av",
   "Component.Information.lastUpdate": "Sist oppdatert",
   "Component.Information.information": "Informasjon",
+  "Component.Information.publishedAt": "Sist publisert",
   "Editpage.Form.isPublished": "Er publisert",
   "Editpage.Form.yes": "Ja",
   "Editpage.Form.no": "Nei",
