--- a/apps/strapi/src/plugins/atlas-editor/admin/src/translations/en.json
+++ b/apps/strapi/src/plugins/atlas-editor/admin/src/translations/en.json
@@ -35,6 +35,7 @@
   "Component.Information.by": "By",
   "Component.Information.lastUpdate": "Last update",
   "Component.Information.information": "Information",
+  "Component.Information.publishedAt": "Last published",
   "Editpage.Form.isPublished": "Is published",
   "Editpage.Form.yes": "Yes",
   "Editpage.Form.no": "No",
