started working on front page fields

--- a/apps/strapi/src/plugins/atlas-editor/admin/src/translations/en.json
+++ b/apps/strapi/src/plugins/atlas-editor/admin/src/translations/en.json
@@ -40,5 +40,6 @@
   "Editpage.Form.yes": "Yes",
   "Editpage.Form.no": "No",
   "Editpage.EditAtlasNav.toc": "Table of Contents",
-  "Editpage.EditAtlasNav.overview": "Overview"
+  "Editpage.EditAtlasNav.overview": "Overview",
+  "Editpage.AtlasFrontPageFields.frontPageFields": "Front Page"
 }
