--- a/apps/strapi/src/plugins/atlas-editor/admin/src/translations/no.json
+++ b/apps/strapi/src/plugins/atlas-editor/admin/src/translations/no.json
@@ -43,5 +43,6 @@
   "Editpage.Form.yes": "Ja",
   "Editpage.Form.no": "Nei",
   "Editpage.EditAtlasNav.toc": "Innholdsfortegnelse",
-  "Editpage.EditAtlasNav.overview": "Oversikt"
+  "Editpage.EditAtlasNav.overview": "Oversikt",
+  "Editpage.AtlasFrontPageFields.frontPageFields": "Forside"
 }
