added validation of fields and disabling of save if invalid

--- a/apps/strapi/src/plugins/atlas-editor/admin/src/translations/en.json
+++ b/apps/strapi/src/plugins/atlas-editor/admin/src/translations/en.json
@@ -1,5 +1,6 @@
 {
   "Homepage.BaseHeaderLayout.title": "Helseatlas",
+  "Homepage.BaseHeaderLayout.subtitle": "Manage health atlases",
   "Homepage.EmptyStateLayout.content": "Create the first atlas",
   "Homepage.createButtonText": "Create new atlas",
   "Homepage.Table.id": "Id",
@@ -12,6 +13,7 @@
   "Homepage.Table.no": "No",
   "Homepage.Table.edit": "Edit",
   "Homepage.Table.delete": "Delete",
+  "Homepage.Table.addNewAtlas": "Add new atlas",
   "Homepage.Subtitle.oneEntryFound": "One entry found",
   "Homepage.Subtitle.entriesFound": "entries found",
   "Homepage.Subtitle.noEntriesFound": "No entries found",
@@ -29,6 +31,7 @@
   "Editpage.EditTitleModal.enterMainTitle": "Enter main title...",
   "Editpage.EditTitleModal.mainTitleLabel": "Main Title",
   "Editpage.EditTitleModal.editMainTitleHint": "The main title is shown at the top of the page for the atlas.",
+  "Editpage.EditTitleModal.mainTitleCannotBeEmpty": "The main title cannot be empty!",
   "Editpage.Notifications.updateSuccess": "The atlas was updated.",
   "Editpage.Notifications.updateError": "The atlas could not be updated!",
   "Component.Information.created": "Created",
@@ -41,5 +44,9 @@
   "Editpage.Form.no": "No",
   "Editpage.EditAtlasNav.toc": "Table of Contents",
   "Editpage.EditAtlasNav.overview": "Overview",
-  "Editpage.AtlasFrontPageFields.frontPageFields": "Front Page"
+  "Editpage.AtlasFrontPageFields.frontPageFields": "Front Page",
+  "Editpage.AtlasFrontPageFields.shortTitleLabel": "Short Title",
+  "Editpage.AtlasFrontPageFields.shortTitleHint": "Title shown on the Helseatlas front page",
+  "Editpage.AtlasFrontPageFields.enterShortTitle": "Enter short title...",
+  "Editpage.AtlasFrontPageFields.shortTitleCannotBeEmpty": "The short title cannot be empty!"
 }
