--- a/apps/strapi/src/plugins/atlas-editor/admin/src/translations/no.json
+++ b/apps/strapi/src/plugins/atlas-editor/admin/src/translations/no.json
@@ -28,7 +28,7 @@
   "Editpage.EditTitleModal.editModalTitle": "Redigér tittel",
   "Editpage.EditTitleModal.cancel": "Avbryt",
   "Editpage.EditTitleModal.finish": "Fullfør",
-  "Editpage.EditTitleModal.enterMainTitle": "Skriv hovedtittel...",
+  "Editpage.EditTitleModal.enterMainTitle": "Skriv hovedtittel ...",
   "Editpage.EditTitleModal.mainTitleLabel": "Hovedtittel",
   "Editpage.EditTitleModal.editMainTitleHint": "Hovedtittelen vises øverst på siden for atlaset.",
   "Editpage.EditTitleModal.mainTitleCannotBeEmpty": "Hovedtittelen kan ikke være tom!",
@@ -44,5 +44,9 @@
   "Editpage.Form.no": "Nei",
   "Editpage.EditAtlasNav.toc": "Innholdsfortegnelse",
   "Editpage.EditAtlasNav.overview": "Oversikt",
-  "Editpage.AtlasFrontPageFields.frontPageFields": "Forside"
+  "Editpage.AtlasFrontPageFields.frontPageFields": "Forside",
+  "Editpage.AtlasFrontPageFields.shortTitleLabel": "Korttittel",
+  "Editpage.AtlasFrontPageFields.shortTitleHint": "Tittel som vises på Helseatlas-forsiden",
+  "Editpage.AtlasFrontPageFields.enterShortTitle": "Oppgi korttittel ...",
+  "Editpage.AtlasFrontPageFields.shortTitleCannotBeEmpty": "Korttittelen kan ikke være tom!"
 }
