started on image uploads

--- a/apps/strapi/src/plugins/atlas-editor/admin/src/translations/en.json
+++ b/apps/strapi/src/plugins/atlas-editor/admin/src/translations/en.json
@@ -48,5 +48,9 @@
   "Editpage.AtlasFrontPageFields.shortTitleLabel": "Short Title",
   "Editpage.AtlasFrontPageFields.shortTitleHint": "Title shown on the Helseatlas front page",
   "Editpage.AtlasFrontPageFields.enterShortTitle": "Enter short title...",
-  "Editpage.AtlasFrontPageFields.shortTitleCannotBeEmpty": "The short title cannot be empty!"
+  "Editpage.AtlasFrontPageFields.shortTitleCannotBeEmpty": "The short title cannot be empty!",
+  "Editpage.AtlasFrontPageFields.frontPageTextLabel": "Front Page Text",
+  "Editpage.AtlasFrontPageFields.frontPageTextHint": "A descriptive text that appears on the Helseatlas front page",
+  "Editpage.AtlasFrontPageFields.enterFrontPageText": "Enter front page text...",
+  "Editpage.AtlasFrontPageFields.frontPageTextCannotBeEmpty": "The front page text cannot be empty!"
 }
