--- a/apps/strapi/src/plugins/atlas-editor/admin/src/translations/no.json
+++ b/apps/strapi/src/plugins/atlas-editor/admin/src/translations/no.json
@@ -48,5 +48,9 @@
   "Editpage.AtlasFrontPageFields.shortTitleLabel": "Korttittel",
   "Editpage.AtlasFrontPageFields.shortTitleHint": "Tittel som vises på Helseatlas-forsiden",
   "Editpage.AtlasFrontPageFields.enterShortTitle": "Oppgi korttittel ...",
-  "Editpage.AtlasFrontPageFields.shortTitleCannotBeEmpty": "Korttittelen kan ikke være tom!"
+  "Editpage.AtlasFrontPageFields.shortTitleCannotBeEmpty": "Korttittelen kan ikke være tom!",
+  "Editpage.AtlasFrontPageFields.frontPageTextLabel": "Forsidetekst",
+  "Editpage.AtlasFrontPageFields.frontPageTextHint": "En beskrivende tekst som vises på Helseatlas-forsiden",
+  "Editpage.AtlasFrontPageFields.enterFrontPageText": "Oppgi forsidetekst ...",
+  "Editpage.AtlasFrontPageFields.frontPageTextCannotBeEmpty": "Forsideteksten kan ikke være tom!"
 }
