updating old forgotten stuff

--- a/apps/strapi/src/plugins/atlas-editor/admin/src/translations/no.json
+++ b/apps/strapi/src/plugins/atlas-editor/admin/src/translations/no.json
@@ -52,5 +52,6 @@
   "Editpage.AtlasFrontPageFields.frontPageTextLabel": "Forsidetekst",
   "Editpage.AtlasFrontPageFields.frontPageTextHint": "En beskrivende tekst som vises på Helseatlas-forsiden",
   "Editpage.AtlasFrontPageFields.enterFrontPageText": "Oppgi forsidetekst ...",
-  "Editpage.AtlasFrontPageFields.frontPageTextCannotBeEmpty": "Forsideteksten kan ikke være tom!"
+  "Editpage.AtlasFrontPageFields.frontPageTextCannotBeEmpty": "Forsideteksten kan ikke være tom!",
+  "list.asset.at.finished": "Ferdig"
 }
